oath swagger updates
